@@ -17,6 +17,8 @@ CHANGES:
 	- patches to Makefiles to improve build portability provided by Mats
 	 Andersson <bsd <at> gisladisker.se>
 0.3
-	- use an external editor for editting using the EDITOR
+	- use an external editor for editing using the EDITOR
 	 environment variable
 	- rewritten Makefiles
+	- add support for encrypted notes
+	- add a config file
